--- a/Sort/Main/templates/categories.html
+++ b/Sort/Main/templates/categories.html
@@ -7,8 +7,10 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'css/bootstrap.css'%}">
+    <link rel="stylesheet" href="{% static 'css/categories.css'%}">
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
-    <title>Главная</title>
+    <!--    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>-->
+    <title>Категории</title>
 </head>
 <body>
 <div class="container">
@@ -32,37 +34,39 @@
             <button type="button" class="btn btn-outline-primary me-2">Login</button>
             <li><a href="reg/" class="btn btn-primary">Sign-up</a></li>
         </ul>
-        <!--            <button type="button" class="btn btn-primary">Sign-up</button>-->
+    </header>
 </div>
-</header>
-</div>
+<center style="margin-bottom:70px">
+    <h1>
+        Все котегории
+    </h1>
+</center>
 
-<div class="album py-5 bg-body-tertiary">
-    <div class="container">
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            <div class="col">
-                <div class="card shadow-sm">
-                    <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                         xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
-                         preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
-                        <rect width="100%" height="100%" fill="#55595c"></rect>
-                        <text x="50%" y="50%" fill="#eceeef" dy=".3em">мама я в интеренет</text>
-                    </svg>
-                    <div class="card-body">
-                        <p class="card-text">Ваууууу что это. Не может быть этооо Симпл димл.</p>
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Посмотреть товар</button>
-                            </div>
-                            <small class="text-body-secondary">9 mins</small>
-                        </div>
-                    </div>
+<div class="container">
+    <div class="row justify-content-evenly">
+        <div class="product-wrap">
+            <div class="product-item">
+                <img src="{% static 'image/samsung.jpg' %}">
+                <div class="product-buttons">
+                    <a href="" class="button">Перейти</a>
                 </div>
             </div>
+            <div class="product-title">
+                <a href="">Телефоны</a>
+            </div>
         </div>
-
+        <div class="product-wrap">
+            <div class="product-item">
+                <img height="300" src="{% static 'image/laptop.jpg' %}">
+                <div class="product-buttons">
+                    <a href="" class="button">Перейти</a>
+                </div>
+            </div>
+            <div class="product-title">
+                <a href="">Нойтбуки, планшеты и компьютеры</a>
+            </div>
+        </div>
     </div>
-</div>
 </div>
 </body>
 </html>
