--- a/Sort/Main/templates/index.html
+++ b/Sort/Main/templates/index.html
@@ -40,6 +40,8 @@
 <div class="album py-5 bg-body-tertiary">
     <div class="container">
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+            {% if object_list %}
+            {% for obj in object_list %}
             <div class="col">
                 <div class="card shadow-sm">
                     <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
@@ -49,7 +51,8 @@
                         <text x="50%" y="50%" fill="#eceeef" dy=".3em">мама я в интеренет</text>
                     </svg>
                     <div class="card-body">
-                        <p class="card-text">Ваууууу что это. Не может быть этооо Симпл димл.</p>
+                        <p class="card-text">{{  obj.name }}</p>
+                        <p class="card-text">{{ obj.description }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <button type="button" class="btn btn-sm btn-outline-secondary">Посмотреть товар</button>
@@ -59,6 +62,10 @@
                     </div>
                 </div>
             </div>
+            {% endfor %}
+            {% else %}
+            <h1>НА данный момент отсутвуют выгодные предложения</h1>
+            {% endif %}
         </div>
 
     </div>
