--- a/Sort/Main/templates/index.html
+++ b/Sort/Main/templates/index.html
@@ -55,7 +55,8 @@
                         <p class="card-text">{{ obj.description }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
-                                <button type="button" class="btn btn-sm btn-outline-secondary">Посмотреть товар</button>
+                                <a class="btn btn-sm btn-outline-secondary" href="/{{obj.id}}/">Посмотреть товар</a>
+<!--                                <button href type="button" class="btn btn-sm btn-outline-secondary">Посмотреть товар</button>-->
                             </div>
                             <small class="text-body-secondary">9 mins</small>
                         </div>
