--- a/Sort/Main/templates/categories.html
+++ b/Sort/Main/templates/categories.html
@@ -25,14 +25,14 @@
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <li><a href="/" class="nav-link px-2 link-secondary">Главаня</a></li>
-            <li><a href="#" class="nav-link px-2">Сраванение</a></li>
-            <li><a href="categories/" class="nav-link px-2">Категории</a></li>
-            <li><a href="admin/" class="nav-link px-2 link-danger">Admin</a></li>
+            <li><a href="/#" class="nav-link px-2">Сраванение</a></li>
+            <li><a href="/categories/" class="nav-link px-2">Категории</a></li>
+            <li><a href="/admin/" class="nav-link px-2 link-danger">Admin</a></li>
         </ul>
 
         <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
             <button type="button" class="btn btn-outline-primary me-2">Login</button>
-            <li><a href="reg/" class="btn btn-primary">Sign-up</a></li>
+            <li><a href="/register/users/" class="btn btn-primary">Sign-up</a></li>
         </ul>
     </header>
 </div>
