--- a/Sort/Main/templates/index.html
+++ b/Sort/Main/templates/index.html
@@ -45,14 +45,15 @@
             <div class="col">
                 <div class="card shadow-sm">
                     <svg class="bd-placeholder-img card-img-top" width="100%" height="225"
-                         xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail"
+                         xmlns="" role="img" aria-label="Placeholder: Thumbnail"
                          preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title>
                         <rect width="100%" height="100%" fill="#55595c"></rect>
+<!--                        <img src="{{ obj.image }}">-->
                         <text x="50%" y="50%" fill="#eceeef" dy=".3em">мама я в интеренет</text>
                     </svg>
                     <div class="card-body">
                         <p class="card-text">{{  obj.name }}</p>
-                        <p class="card-text">{{ obj.description }}</p>
+                      1  <p class="card-text">{{ obj.description }}</p>
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a class="btn btn-sm btn-outline-secondary" href="/{{obj.id}}/">Посмотреть товар</a>
