--- a/Sort/Main/templates/index.html
+++ b/Sort/Main/templates/index.html
@@ -52,13 +52,9 @@
                         <text x="50%" y="50%" fill="#eceeef" dy=".3em">мама я в интеренет</text>
                     </svg>
                     <div class="card-body">
-<<<<<<< HEAD
-                        <p class="card-text">{{  obj.name }}</p>
-                      1  <p class="card-text">{{ obj.description }}</p>
-=======
-                        <p class="card-text">{{ obj.name }}</p>
-                        <p class="card-text">{{ obj.description }}</p>
->>>>>>> c95cc34d003b4f79d3560a4db2ed3b1acc7a128a
+1                        <p class="card-text">{{  obj.name }}</p>
+                      <p class="card-text">{{ obj.description }}</p>
+
                         <div class="d-flex justify-content-between align-items-center">
                             <div class="btn-group">
                                 <a class="btn btn-sm btn-outline-secondary" href="/{{obj.id}}/">Посмотреть товар</a>
