--- a/Sort/Main/templates/categories.html
+++ b/Sort/Main/templates/categories.html
@@ -48,22 +48,33 @@
             <div class="product-item">
                 <img src="{% static 'image/samsung.jpg' %}">
                 <div class="product-buttons">
-                    <a href="" class="button">Перейти</a>
+                    <a href="http://127.0.0.1:8000/filter/?category=1" class="button">Перейти</a>
                 </div>
             </div>
             <div class="product-title">
-                <a href="">Телефоны</a>
+                <a href="http://127.0.0.1:8000/filter/?category=1">Телефоны</a>
             </div>
         </div>
         <div class="product-wrap">
             <div class="product-item">
                 <img height="300" src="{% static 'image/laptop.jpg' %}">
                 <div class="product-buttons">
-                    <a href="" class="button">Перейти</a>
+                    <a href="http://127.0.0.1:8000/filter/?category=2" class="button">Перейти</a>
                 </div>
             </div>
             <div class="product-title">
-                <a href="">Нойтбуки, планшеты и компьютеры</a>
+                <a href="http://127.0.0.1:8000/filter/?category=2">Нойтбуки</a>
+            </div>
+        </div>
+        <div class="product-wrap">
+            <div class="product-item">
+                <img height="300" src="{% static 'image/tablet.jpg' %}">
+                <div class="product-buttons">
+                    <a href="http://127.0.0.1:8000/filter/?category=3" class="button">Перейти</a>
+                </div>
+            </div>
+            <div class="product-title">
+                <a href="http://127.0.0.1:8000/filter/?category=3">Планшеты</a>
             </div>
         </div>
     </div>
